--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "onedrive",
         "api"
     ],
-    "version": "v2.0.6",
+    "version": "v2.0.7",
     "type": "library",
     "license": "MIT",
     "autoload": {
@@ -27,10 +27,10 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.1 || ^8.4",
         "league/flysystem": "^3.12",
-        "microsoft/microsoft-graph": "^1.110",
-        "illuminate/support": "^v11.9.2"
+        "microsoft/microsoft-graph": "^1.110 || ^2.26",
+        "illuminate/support": "^v11.9.2 || ^12.0"
     },
     "scripts": {
         "test": "vendor/bin/phpunit",
@@ -39,11 +39,15 @@
         ]
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "php-http/discovery": true,
+            "tbachert/spi": true
+        }
     },
     "require-dev": {
         "phpunit/phpunit": "^10.5.20 || ^11.1.3",
-        "laravel/framework": "^v11.10",
-        "orchestra/testbench": "^v9.1.2"
+        "laravel/framework": "^v11.10 || ^12.0",
+        "orchestra/testbench": "^v9.1.2 || ^10.0"
     }
 }
